--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -12,9 +12,14 @@
   "devDependencies": {
     "@babel/core": "^7.14.0",
     "@babel/preset-env": "^7.14.0",
-    "@babel/preset-react": "^7.13.13"
+    "@babel/preset-react": "^7.13.13",
+    "babel-core": "^6.26.3",
+    "babel-jest": "^26.6.3",
+    "jest": "^26.6.3",
+    "react-dom": "^17.0.2"
   },
   "dependencies": {
-    "@babel/cli": "^7.13.16"
+    "@babel/cli": "^7.13.16",
+    "react": "^17.0.2"
   }
 }
