--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint . && prettier-eslint --list-different **/*.js",
+    "format": "prettier-eslint --write **/*.js"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +17,11 @@
     "@babel/preset-react": "^7.13.13",
     "babel-core": "^6.26.3",
     "babel-jest": "^26.6.3",
+    "eslint": "^7.25.0",
+    "eslint-plugin-jest": "^24.3.6",
+    "eslint-plugin-react": "^7.22.0",
     "jest": "^26.6.3",
+    "prettier-eslint-cli": "^5.0.1",
     "react-dom": "^17.0.2"
   },
   "dependencies": {
