--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@babel/preset-react": "^7.13.13",
     "babel-core": "^6.26.3",
     "babel-jest": "^26.6.3",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "eslint": "^7.25.0",
     "eslint-plugin-jest": "^24.3.6",
     "eslint-plugin-react": "^7.22.0",
