--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@babel/cli": "^7.13.16",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2"
   }
