--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint": "^7.25.0",
     "eslint-plugin-jest": "^24.3.6",
     "eslint-plugin-react": "^7.22.0",
+    "html-webpack-plugin": "^5.3.1",
     "jest": "^26.6.3",
     "prettier-eslint-cli": "^5.0.1",
     "react-dom": "^17.0.2",
