--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "lint": "eslint . && prettier-eslint --list-different **/*.js",
+    "lint:js": "eslint . && prettier-eslint --list-different **/*.js",
+    "lint:css": "stylelint **/*.js",
+    "lint": "npm run lint:js && npm run lint:css",
     "format": "prettier-eslint --write **/*.js",
     "build": "webpack --config webpack.config.js",
     "dev": "webpack serve --mode development --env development --hot --port 3000"
@@ -30,6 +32,10 @@
     "jest": "^26.6.3",
     "prettier-eslint-cli": "^5.0.1",
     "react-dom": "^17.0.2",
+    "stylelint": "^13.13.1",
+    "stylelint-config-recommended": "^5.0.0",
+    "stylelint-config-styled-components": "^0.1.1",
+    "stylelint-processor-styled-components": "^1.10.0",
     "webpack": "^5.36.2",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
@@ -37,7 +43,9 @@
   "dependencies": {
     "@babel/cli": "^7.13.16",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "babel-plugin-styled-components": "^1.12.0",
     "prop-types": "^15.7.2",
-    "react": "^17.0.2"
+    "react": "^17.0.2",
+    "styled-components": "^5.2.3"
   }
 }
