--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@babel/core": "^7.14.0",
     "@babel/preset-env": "^7.14.0",
     "@babel/preset-react": "^7.13.13",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
+    "babel-plugin-styled-components": "^1.12.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "eslint": "^7.25.0",
@@ -30,6 +32,7 @@
     "eslint-plugin-react": "^7.22.0",
     "html-webpack-plugin": "^5.3.1",
     "jest": "^26.6.3",
+    "jest-styled-components": "^7.0.4",
     "prettier-eslint-cli": "^5.0.1",
     "react-dom": "^17.0.2",
     "stylelint": "^13.13.1",
@@ -43,7 +46,6 @@
   "dependencies": {
     "@babel/cli": "^7.13.16",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
-    "babel-plugin-styled-components": "^1.12.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "styled-components": "^5.2.3"
